Adding Bayesian B-stat paper by Reinhard

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3623,3 +3623,13 @@ doi = "10.1103/PhysRevD.89.043001"
     year = 2017,
     doi = "10.1103/PhysRevLett.118.121102"
 }
+
+@ARTICLE{BStatPrix2009,
+    author = "Prix, B. and Krishnan, B.",
+    title = "Targeted search for continuous gravitational waves: {B}ayesian versus maximum-likelihood statistics",
+    journal = "{C}lass {Q}uant {G}rav",
+    volume = "26",
+    pages = "204013",
+    year = 2009,
+    doi = "10.1088/0264-9381/26/20/204013"
+}
