Easy fix to bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3260,7 +3260,7 @@ year = "2015"
 }
 
 @article{ScoX1MDC2015PRD,
-  title = {Gravitational waves from Scorpius X-1: A comparison of search methods and prospects for detection with advanced detectors},
+  title = {Gravitational waves from {S}corpius {X-1}: A comparison of search methods and prospects for detection with advanced detectors},
   author = {Messenger, C. and Bulten, H. J. and Crowder, S. G. and Dergachev, V. and Galloway, D. K. and Goetz, E. and Jonker, R. J. G. and Lasky, P. D. and Meadors, G. D. and Melatos, A. and Premachandra, S. and Riles, K. and Sammut, L. and Thrane, E. H. and Whelan, J. T. and Zhang, Y.},
   journal = {Phys. Rev. D},
   volume = {92},
@@ -3347,7 +3347,7 @@ year = "2015"
 }
 
 @ARTICLE{LeaciPrixDirectedFStatPRD,
- title = {Directed searches for continuous gravitational waves from binary systems: Parameter-space metrics and optimal Scorpius X-1 sensitivity},
+ title = {Directed searches for continuous gravitational waves from binary systems: Parameter-space metrics and optimal {S}corpius {X-1} sensitivity},
   author = {Leaci, Paola and Prix, Reinhard},
   journal = {Phys. Rev. D},
   volume = {91},
