Some missing commas

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2786,7 +2786,7 @@ year = "2009"
 
 @ARTICLE{AbbottScoX12007,
 author = "Abbott, B. and others",
-title = "Searches for periodic gravitational waves from unknown isolated sources and {Scorpius X-1}: results from the second LIGO science run",
+title = "Searches for periodic gravitational waves from unknown isolated sources and {Scorpius X-1}: results from the second {LIGO} science run",
 journal = "Phys. {R}ev. {D}",
 volume = "76",
 pages = "082001",
@@ -3168,7 +3168,7 @@ year = "2001"
     title = "Searches for continuous gravitational waves from {S}corpius {X-1} and {XTE} {J1705-305} in {LIGO}'s sixth science run",
     institution = {arXiv},
     year = 2016,
-    number = "gr-qc/1610.09391"
+    number = "gr-qc/1610.09391",
     note = ""
 }
 
@@ -3279,6 +3279,7 @@ year = "2015"
 @ARTICLE{ScoX1CrossCorr2017arxivO1,
   title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
   author = "Abbott, B.P and others",
+  journal = "",
   instituion = "arXiv",
   number = "astro-ph.HE/1706:03119",
   year = 2017
@@ -3303,6 +3304,7 @@ year = "2015"
 author = "Whelan, J.T. and Sundaresan, S. and Zhang, Y. and Peiris, P.",
 title = "A model-based cross-correlation search for gravitational waves from {Scorpius X-1}",
 institution = "arXiv",
+journal ="",
 number = "gr-qc/1504.05890",
 year = "2015"
 }
@@ -3543,7 +3545,7 @@ doi = "10.1103/PhysRevD.89.043001"
     journal = "{P}hys. {R}ev. {D}",
     volume = "79",
     pages = "104017",
-    doi = {10.1103/PhysRevD.79.104017}
+    doi = {10.1103/PhysRevD.79.104017},
     arxivPrefix = "arXiv",
     eprint = {gr-qc/0809.5223}
 }
@@ -3591,7 +3593,7 @@ doi = "10.1103/PhysRevD.89.043001"
     journal = "{P}hys {R}ev {D}",
     volume = "95",
     pages = "12200",
-    year = 2017
+    year = 2017,
     doi = {10.1103/PhysRevD.95.122003}
 }
 
@@ -3607,7 +3609,7 @@ doi = "10.1103/PhysRevD.89.043001"
 
 @ARTICLE{SidebandBessel2017,
     author = "Clearwater, P. and Melatos, A. and Sun, L." ,
-    title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking"
+    title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking",
     journal = {LIGO DCC},
     year = 2017,
     volume = "P1700040" 
