Adding the Dirichlet kernel paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3635,3 +3635,14 @@ doi = "10.1103/PhysRevD.89.043001"
     year = 2009,
     doi = "10.1088/0264-9381/26/20/204013"
 }
+
+@ARTICLE{Allen2002,
+    author = "Allen, B and Papa, M.A. and Schutz, B.F.",
+    title = "Optimal strategies for sinusoidal signal detection",
+    journal = "{P}hys {R}ev {D}",
+    volume = "66",
+    pages = "1002003",
+    year = 2002,
+    doi = "10.1103/PhysRevD.66.102003"
+}
+
