Added a few bibliographic citations

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3569,6 +3569,15 @@ doi = "10.1103/PhysRevD.89.043001"
     year = "2005"
 }
 
+@ARTICLE{CutlerSemi2005,
+    author = "Cutler, C. and Gholami, I. and Krishnan, B.",
+    title = "Improved stack-slide searches for gravitational-wave pulsars",
+    journal = "{P}hys {R}ev {D}",
+    volume = "72",
+    pages = "042004",
+    year = "2005"
+}
+
 @ARTICLE{EinsteinHomeS52013,
     author = "Aasi, J. and others",
     title = "Einstein@Home all-sky search for periodic gravitational waves in {LIGO S5} data",
@@ -3646,3 +3655,20 @@ doi = "10.1103/PhysRevD.89.043001"
     doi = "10.1103/PhysRevD.66.102003"
 }
 
+@ARTICLE{PrixMultiMetric2007,
+    author = "Prix, R.",
+    title = "Search for continuous gravitational waves: metric of the multidetector {F}-statistic",
+    journal = "{P}hys {R}ev {D}",
+    volume = "75",
+    pages = "023004",
+    year = "2007"
+}
+
+@ARTICLE{PrixShaltev2012,
+    author = "Prix, R. and Shaltev, M.",
+    title = "Search for continuous gravitational waves: optimal {S}tack{S}lide method at fixed computing cost",
+    journal = "{P}hys {R}ev {D}",
+    volume = "85",
+    pages = "084010",
+    year = "2012"
+}
