Added a few more sources

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3672,3 +3672,32 @@ doi = "10.1103/PhysRevD.89.043001"
     pages = "084010",
     year = "2012"
 }
+
+@ARTICLE{ThraneStochastic2009,
+    author = "Thrane, E. and Ballmer, S. and Romano, J.D. and Mitra, S. and Talukder, D. and Bose, S. and Mandic, V.",
+    title = "Probing the anisotropies of a stochastic gravitational-wave background using a network of ground-based laser interferomters",
+    journal = "{P}hys {R}ev {D}",
+    volume = "80",
+    pages = "122002",
+    year = "2009"
+}
+
+@ARTICLE{ChristensenStochastic1992,
+    author = "Christensen, N.",
+    title = "Measuring the stochastic gravitational-radiation background with laser-interferometric antennas",
+    journal = "{P}hys {R}ev {D}",
+    volume = "46",
+    number = "12",
+    pages = "5250",
+    year = 1992
+}
+
+@ARTICLE{FlanaganStochastic1993,
+    author = "Flanagan, E.E.",
+    title = "Sensitivity of the {L}aser {I}nterferomter {G}ravitational {W}ave {O}bservatory to a stochastic background, and its dependence on the detector orientations",
+    journal = "{P}hys {R}ev {D}",
+    volume = "48",
+    number = "6",
+    pages = "2389",
+    year = 1993
+}
