--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3701,3 +3701,13 @@ doi = "10.1103/PhysRevD.89.043001"
     pages = "2389",
     year = 1993
 }
+
+@ARTICLE{Chung2011,
+    author = "Chung, C.T.Y. and Melatos, A. and Krishnan, B. and Whelan, J.T.",
+    title = "Designing a cross-correlation search for continuous-wave gravitational radiation from a neutron star in the supernova remnant {SNR} 1987{A}",
+    journal = {MNRAS},
+    volume = "414",
+    pages = "2650",
+    year = 2011,
+    doi = "10.1111/j.1365-2966.2011.18585.x"
+}
