Updated citation to include Mitra the private communication with Schutz

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3711,3 +3711,20 @@ doi = "10.1103/PhysRevD.89.043001"
     year = 2011,
     doi = "10.1111/j.1365-2966.2011.18585.x"
 }
+
+@ARTICLE{MitraRadiometer2008,
+    author = "Mitra, S. and Dhurandhar, S. and Souradeep, T. and Lazzarini, A. and Mandic, V. and Bose, S. and Ballmer, S.",
+    title = "Gravitational wave radiometry: mapping a stochastic gravitational wave background",
+    journal = "{P}hys {R}ev {D}",
+    volume = "77",
+    pages = "042002",
+    year = 2008
+}
+
+@misc{SchutzCBCResamp2017,
+    author = "Schutz, B.",
+    year = 2017,
+    date = "2017-09-01",
+    comment = "Idea for resampling CBC signals",
+    howpublished = "private communication"
+}
