Adding references to David and Jing

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3728,3 +3728,23 @@ doi = "10.1103/PhysRevD.89.043001"
     comment = "Idea for resampling CBC signals",
     howpublished = "private communication"
 }
+
+@ARTICLE{KeitelRobust2014,
+    author = "Keitel, D. and Prix, R. and Papa, M.A. and Leaci, P. and Siddiqi, M.",
+    title = "Search for continuous gravitational waves: improving robustness versus instrumental artifacts",
+    journal = "{P}hys {R}ev {D}",
+    volume = "89",
+    pages = "064023",
+    year = "2014",
+    doi = "10.1103/PhysRevD.89.064023"
+}
+
+@ARTICLE{MingSetup2015,
+    author = "Ming, J. and Krishnan, B. and Papa, M.A. and Aulbert, C. and Fehrmann, H.",
+    title = "Optimal directed searches for continuous gravitational waves",
+    journal = "{P}hys {R}ev {D}",
+    volume = "93",
+    pages = "064011",
+    year = "2015",
+    doi = "10.1103/PhysRevD.93.064011"
+}
