Reinhard timing model

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3748,3 +3748,11 @@ doi = "10.1103/PhysRevD.89.043001"
     year = "2015",
     doi = "10.1103/PhysRevD.93.064011"
 }
+
+@ARTICLE{PrixTimingModel2017,
+    author = "Prix, R.",
+    title = "Characterizing timing and memory-requirements of the {F}-statistic implementations in {LALSuite}",
+    journal = "LIGO DCC",
+    year = 2017,
+    volume = "T1600531"
+}
