Updating bibliography with newly-published O1 CrossCorr paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3280,23 +3280,21 @@ year = "2015"
   title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
   author = "Abbott, B.P and others",
   journal = "",
-  instituion = "arXiv",
+  institution = "arXiv",
   number = "astro-ph.HE/1706:03119",
   year = 2017
 }
 
 @ARTICLE{ScoX1CrossCorr2017ApJO1,
-  title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
+  title = "Upper limits on gravitational waves from {S}corpius {X-1} from a model-based cross-correlation search in {A}dvanced {LIGO} data",
   author = "Abbott, B.P and others",
-  journal = "",
-  volume = {},
-  issue = {},
-  pages = {},
-  numpages = {},
+  journal = "Astrophys {J}",
+  volume = {847},
+  pages = {47},
+  numpages = {14},
   year = {2017},
-  month = {},
-  publisher = {},
-  doi = {}
+  doi = {10.3847/1538-4357}
+  comment = "arXiv:astro-ph.HE/1706.03119"
 }
 
 
@@ -3310,7 +3308,7 @@ year = "2015"
 }
 
 @ARTICLE{ScoX1CrossCorr2015PRD,
-  title = "Model-based cross-correlation search for gravitational waves from Scorpius X-1",
+  title = "Model-based cross-correlation search for gravitational waves from {S}corpius {X-1}",
   author = "Whelan, John T. and Sundaresan, Santosh and Zhang, Yuanhao and Peiris, Prabath",
   journal = "{P}hys. {R}ev. {D}",
   volume = {91},
@@ -3755,4 +3753,13 @@ doi = "10.1103/PhysRevD.89.043001"
     journal = "LIGO DCC",
     year = 2017,
     volume = "T1600531"
+}
+
+@ARTICLE{BlandfordBinary1976,
+    author = "Blandford, R. and Teukolsky, S.",
+    title = "Arrival-time analysis for a pulsar in a binary system",
+    journal = "Astrophys {J}",
+    volume = "205",
+    pages = "580",
+    year = "1976"
 }
