Source about the overall normalization

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3755,6 +3755,14 @@ doi = "10.1103/PhysRevD.89.043001"
     volume = "T1600531"
 }
 
+@ARTICLE{PrixFStatModel2011,
+    author = "Prix, R.",
+    title = "The {F}-statistic and its implementation in {ComputeFStatistic\_v2}",
+    journal = "LIGO DCC",
+    year = 2011,
+    volume = "T0900149-v3"
+}
+
 @ARTICLE{BlandfordBinary1976,
     author = "Blandford, R. and Teukolsky, S.",
     title = "Arrival-time analysis for a pulsar in a binary system",
