Updated Arunava spin-wandering

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3506,7 +3506,10 @@ doi = "10.1103/PhysRevD.89.043001"
 
 @ARTICLE{MukherjeeSpinWandering2016,
     author = "Mukherjee, A. and Messenger, C. and Riles, K.",
-    title = {in prep.}
+    title = "Accretion-induced spin-wandering effects on the neutron star in {S}corpius X-1: implications for continuous gravitational wave searches",
+    arxivPrefix = "arXiv",
+    eprint = "gr-qc/1710:06185",
+    year = "2017-10-17"
 }
 
 @misc{S6LOSC,
