Update to spin wandering arxiv citation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3508,7 +3508,8 @@ doi = "10.1103/PhysRevD.89.043001"
     author = "Mukherjee, A. and Messenger, C. and Riles, K.",
     title = "Accretion-induced spin-wandering effects on the neutron star in {S}corpius X-1: implications for continuous gravitational wave searches",
     arxivPrefix = "arXiv",
-    eprint = "gr-qc/1710:06185",
+    primaryClass = "gr-qc",
+    eprint = "1710.06185",
     year = "2017-10-17"
 }
 
