--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3506,7 +3506,7 @@ doi = "10.1103/PhysRevD.89.043001"
 
 @ARTICLE{MukherjeeSpinWandering2016,
     author = "Mukherjee, A. and Messenger, C. and Riles, K.",
-    title = "Accretion-induced spin-wandering effects on the neutron star in {S}corpius X-1: implications for continuous gravitational wave searches",
+    title = "Accretion-induced spin-wandering effects on the neutron star in {S}corpius {X}-1: implications for continuous gravitational wave searches",
     arxivPrefix = "arXiv",
     primaryClass = "gr-qc",
     eprint = "1710.06185",
