New biblio entries for aLIGO standard ref and updates to others

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3618,13 +3618,25 @@ doi = "10.1103/PhysRevD.89.043001"
     doi = "10.1103/PhysRevD.93.123009"
 }
 
-@ARTICLE{SidebandBessel2017,
+@ARTICLE{DCCSidebandBessel2017,
     author = "Clearwater, P. and Melatos, A. and Sun, L." ,
     title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking",
     journal = {LIGO DCC},
     year = 2017,
     volume = "P1700040" 
 }
+
+@ARTICLE{SidebandBessel2017,
+    author = "Clearwater, P. and Melatos, A. and Sun, L." ,
+    title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking",
+    journal = "{P}hys {R}ev {D}",
+    year = 2017,
+    volume = "96",
+    pages = "102006",
+    doi = "10.1103/PhysRevD.96.102006"
+}
+
+
 
 
 @ARTICLE{O1Radiometer2017,
@@ -3638,7 +3650,7 @@ doi = "10.1103/PhysRevD.89.043001"
 }
 
 @ARTICLE{BStatPrix2009,
-    author = "Prix, B. and Krishnan, B.",
+    author = "Prix, R. and Krishnan, B.",
     title = "Targeted search for continuous gravitational waves: {B}ayesian versus maximum-likelihood statistics",
     journal = "{C}lass {Q}uant {G}rav",
     volume = "26",
@@ -3682,6 +3694,15 @@ doi = "10.1103/PhysRevD.89.043001"
     volume = "80",
     pages = "122002",
     year = "2009"
+}
+
+@ARTICLE{WettePRD2016,
+    author = "Wette, K.",
+    title = "Empirically extending the range of validity of parameter-space metrics for all-sky searches for gravitational-wave pulsars",
+    journal = "{P}hys {R}ev {D}",
+    volume = "94",
+    pages = "122002",
+    year = 2016
 }
 
 @ARTICLE{ChristensenStochastic1992,
@@ -3754,9 +3775,10 @@ doi = "10.1103/PhysRevD.89.043001"
 @ARTICLE{PrixTimingModel2017,
     author = "Prix, R.",
     title = "Characterizing timing and memory-requirements of the {F}-statistic implementations in {LALSuite}",
-    journal = "LIGO DCC",
+    institution = "LIGO DCC",
     year = 2017,
-    volume = "T1600531"
+    number = "T1600531",
+    note = "https://dcc.ligo.org/LIGO-T1600531/public"
 }
 
 @ARTICLE{PrixFStatModel2011,
@@ -3764,7 +3786,8 @@ doi = "10.1103/PhysRevD.89.043001"
     title = "The {F}-statistic and its implementation in {ComputeFStatistic\_v2}",
     journal = "LIGO DCC",
     year = 2011,
-    volume = "T0900149-v3"
+    volume = "T0900149-v3",
+    note = "https://dcc.ligo.org/LIGO-T0900149-v3/public"
 }
 
 @ARTICLE{BlandfordBinary1976,
@@ -3775,3 +3798,52 @@ doi = "10.1103/PhysRevD.89.043001"
     pages = "580",
     year = "1976"
 }
+
+@article{ALIGOStandardRef,
+      author         = "Aasi, J. and others",
+      title          = "{Advanced LIGO}",
+      collaboration  = "LIGO Scientific",
+      journal        = "Class. Quant. Grav.",
+      volume         = "32",
+      year           = "2015",
+      pages          = "074001",
+      doi            = "10.1088/0264-9381/32/7/074001",
+      eprint         = "1411.4547",
+      archivePrefix  = "arXiv",
+      primaryClass   = "gr-qc",
+      SLACcitation   = "%%CITATION = ARXIV:1411.4547;%%"
+}
+
+@article{AVirgoStandardRef,
+      author         = "Acernese, F. and others",
+      title          = "{Advanced Virgo: a second-generation interferometric
+                        gravitational wave detector}",
+      collaboration  = "VIRGO",
+      journal        = "Class. Quant. Grav.",
+      volume         = "32",
+      year           = "2015",
+      number         = "2",
+      pages          = "024001",
+      doi            = "10.1088/0264-9381/32/2/024001",
+      eprint         = "1408.3978",
+      archivePrefix  = "arXiv",
+      primaryClass   = "gr-qc",
+      SLACcitation   = "%%CITATION = ARXIV:1408.3978;%%"
+}
+
+@article{KAGRAStandardRef,
+  title = "Interferometer design of the {KAGRA} gravitational wave detector",
+  author = {Aso, Yoichi and Michimura, Yuta and Somiya, Kentaro and Ando, Masaki and Miyakawa, Osamu and Sekiguchi, Takanori and Tatsumi, Daisuke and Yamamoto, Hiroaki},
+  collaboration = {The KAGRA Collaboration},
+  journal = {Phys. Rev. D},
+  volume = {88},
+  issue = {4},
+  pages = {043007},
+  numpages = {15},
+  year = {2013},
+  month = {Aug},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.88.043007},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.88.043007}
+}
+
