--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3847,3 +3847,12 @@ doi = "10.1103/PhysRevD.89.043001"
   url = {https://link.aps.org/doi/10.1103/PhysRevD.88.043007}
 }
 
+@ARTICLE{WhelanNewAmplitude2014CQG,
+    author = "Whelan, J.T. and Prix, R. and Cutler, C.J. and Willis, J.L",
+    title = "New coordinates for the amplitude parameter space of continuous gravitational waves",
+    journal = "{C}lass {Q}uant {G}rav",
+    volume = "31",
+    pages = "065002",
+    year = "2014",
+    doi = "10.1088/0264-9381/31/6/065002"
+}
