Some fixes to the bibliography

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2721,7 +2721,7 @@ pages = "1693"
 }
 
 @ARTICLE{Jaranowski1998,
-author = "Jaranowski, P. and Kr\'{o}lak, A. and Schutz, B.",
+author = "Jaranowski, P. and Kr\'{o}lak, A. and Schutz, B.F.",
 title = "Data analysis of gravitational-wave signals from spinning neutron stars: the signal and its detection",
 journal = "Phys. {R}ev. {D}",
 year = "1998",
@@ -2803,7 +2803,7 @@ pages = "271102"
 }
 
 @ARTICLE{Owen1998,
-author = "Owen, B.J. and others",
+author = "Owen, B.J. and Lindblom, L. and Cutler, C. and Schutz, B.F. and Vecchio, A. and Andersson, N.",
 title = "Gravitational waves from hot young rapidly rotating neutron stars",
 journal = "Phys. {R}ev. {D}",
 volume = "58",
@@ -3627,7 +3627,7 @@ doi = "10.1103/PhysRevD.89.043001"
 }
 
 @ARTICLE{SidebandBessel2017,
-    author = "Clearwater, P. and Melatos, A. and Sun, L." ,
+    author = "Suvorova, S. and Clearwater, P. and Melatos, A. and Sun, L. and Moran, W. and Evans, R.J." ,
     title = "Hidden {M}arkov model tracking of continuous gravitational waves from a binary neutron star with wandering spin. {II.} {B}inary orbital phase tracking",
     journal = "{P}hys {R}ev {D}",
     year = 2017,
@@ -3664,7 +3664,7 @@ doi = "10.1103/PhysRevD.89.043001"
     title = "Optimal strategies for sinusoidal signal detection",
     journal = "{P}hys {R}ev {D}",
     volume = "66",
-    pages = "1002003",
+    pages = "102003",
     year = 2002,
     doi = "10.1103/PhysRevD.66.102003"
 }
@@ -3768,7 +3768,7 @@ doi = "10.1103/PhysRevD.89.043001"
     journal = "{P}hys {R}ev {D}",
     volume = "93",
     pages = "064011",
-    year = "2015",
+    year = "2016",
     doi = "10.1103/PhysRevD.93.064011"
 }
 
