Reference to how SFTs are defined

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3790,6 +3790,15 @@ doi = "10.1103/PhysRevD.89.043001"
     note = "https://dcc.ligo.org/LIGO-T0900149-v3/public"
 }
 
+@ARTICLE{AllenMendellSFT2004,
+    author = "Allen, B. and Mendell, G.",
+    title = "{SFT} {D}ata {F}ormat {V}ersion~2 {S}pecification",
+    journal = "LIGO DCC",
+    year = 2004,
+    volume = "T040164",
+    note = "https://dcc.ligo.org/LIGO-T040164/public"
+}
+
 @ARTICLE{BlandfordBinary1976,
     author = "Blandford, R. and Teukolsky, S.",
     title = "Arrival-time analysis for a pulsar in a binary system",
