Changes to bibliography from proof stage

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -2879,7 +2879,8 @@ pages = "084017"
   journal = {APJ},
   title = "Axial instability of rotating relativistic stars",
   volume = "502",
-  number = "714",
+  number = "2",
+  pages = "714",
   year = "1998"
 }
 
@@ -3132,6 +3133,7 @@ title = "Evidence for {X} rays from sources outside the solar system",
 journal = "Phys. {R}ev. {L}ett.",
 volume = "9",
 number = "11",
+pages = "439",
 year = "1962"
 }
 
@@ -3815,6 +3817,7 @@ doi = "10.1103/PhysRevD.89.043001"
       journal        = "Class. Quant. Grav.",
       volume         = "32",
       year           = "2015",
+      number         = "7",
       pages          = "074001",
       doi            = "10.1088/0264-9381/32/7/074001",
       eprint         = "1411.4547",
