New additions to the bibliography so that I can work on LALInference

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1802,6 +1802,7 @@ title = "Spherical harmonics",
 note = "Web: http://www.du.edu/~jcalvert/math/harmonic/harmonic.htm",
 month = "March",
 year = "2001"
+
 }
 
 @UNPUBLISHED{BetheBNLT7,
@@ -3867,3 +3868,62 @@ doi = "10.1103/PhysRevD.89.043001"
     year = "2014",
     doi = "10.1088/0264-9381/31/6/065002"
 }
+
+@ARTICLE{VeitchLALInference2015,
+    author = "Veitch, J. and others",
+    title = "Parameter estimation for compact binaries with ground-based gravitational-wave observations using the {LALI}nference software library",
+    journal = "{P}hys {R}ev {D}",
+    volume = "91",
+    pages = "042003",
+    year = "2015",
+    doi = "10.1103/PhysRevD.91.042003",
+    archivePrefix = "arXiv",
+    eprint = "1409.7215",
+    primaryClass = "gr-qc"
+}
+
+
+@ARTICLE{TalbotPopulation2017,
+    author = "Talbot, C. and Thrane, E.",
+    title = "Determining the population properties of spinning black holes",
+    journal = "{P}hys {R}ev {D}",
+    volume = "96",
+    pages = "023012",
+    year = "2017",
+    doi = "10.1103/PhysRevD.96.023012",
+    archivePrefix = "arXiv",
+    eprint = "1704.08370",
+    primaryClass = "astro-ph.HE"
+}
+
+
+@ARTICLE{WilliamsonSystematics2017,
+    author = "Williamson, A.R. and Lange, J. and O'Shaughnessy, R. and Clark, J.A. and Kumar, P. and Calder\'{o}n Bustillo, J. and Veitch, J.",
+    title = "Systematic challenges for future gravitational wave measurements of precessing binary black holes",
+    journal = "{P}hys {R}ev {D}",
+    volume = "96",
+    pages = "124041",
+    year = "2017",
+    doi = "10.1103/PhysRevD.96.124041",
+    archivePrefix = "arXiv",
+    eprint = "1709.03095",
+    primaryClass = "gr-qc"
+}
+
+
+@ARTICLE{PangFalseDeviations2018,
+    author = "Pang, P. and Calder\'{o}n Bustillo, J. and Wang, Y. and Li, T.G.F.",
+    title = "On the potential observation of false deviations from general relativity in gravitational wave observations from binary black holes",
+    year = "2018",
+    institution = "arXiv",
+    volume = "gr-qc/1802.03306"
+}
+
+@ARTICLE{SmithTBS2017,
+    author = "Smith, R. and Thrane, E.",
+    title = "The optimal search for an astrophysical gravitational-wave background",
+    year = "2017",
+    institution = "arXiv",
+    volume = "gr-qc/1712.00688"
+}
+
