Fix to DOI in O1 CrossCorr paper

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3295,7 +3295,7 @@ year = "2015"
   pages = {47},
   numpages = {14},
   year = {2017},
-  doi = {10.3847/1538-4357}
+  doi = {10.3847/1538-4357},
   comment = "arXiv:astro-ph.HE/1706.03119"
 }
 
