New citations for the spin precession project

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -3927,3 +3927,20 @@ doi = "10.1103/PhysRevD.89.043001"
     volume = "gr-qc/1712.00688"
 }
 
+@ARTICLE{LangeRapidPE2018DCC,
+    author = "Lange, J. and O'Shaughnessy, R. and Rizzo, M.",
+    title = "Rapid and accurate parameter inference for coalescing, precessing compact binaries",
+    journal = "LIGO DCC",
+    year = 2018,
+    volume = "P1800084"
+}
+
+@ARTICLE{WysockiReconstructing2018arXiv,
+    author = "Wysocki, D. and Lange, J. and O'Shaughnessy, R.",
+    title = "Reconstructing phenomenological distributions of compact binaries via gravitational wave observations",
+    year = "2018",
+    institution = "arXiv",
+    volume = "gr-qc/1805.06442"
+}
+
+
